# LangGraph-Multi-Agent-Investigation-System-on-Azure

./: .env.example  README.md  pyproject.toml
examples/: sample_investigation.md  sample_shopping.md
scripts/: run_investigation_demo.py  run_shopping_demo.py  test_langfuse.py
src/agents/: document_analyst.py  financial_analyst.py  report_generator.py  supervisor.py  web_researcher.py
src/agents/shopping/: __init__.py  price_comparator.py  product_researcher.py  recommendation_generator.py  review_aggregator.py  supervisor.py
src/api/: main.py
src/api/routes/: health.py  investigation.py
src/config/: llm_factory.py  settings.py
src/evaluation/: evaluator.py
src/graph/: investigation_graph.py  shopping_graph.py  shopping_state.py  state.py
src/services/: blob_service.py  cosmos_service.py  document_service.py
src/tools/: _mock_data.py  azure_search.py  financial_data.py  product_search.py  web_search.py
tests/: conftest.py
tests/test_agents/: test_document_analyst.py  test_supervisor.py
tests/test_api/: test_investigation_routes.py
tests/test_graph/: test_investigation_graph.py
